--- a/public/scss/components/Password.module.scss
+++ b/public/scss/components/Password.module.scss
@@ -1,47 +1,97 @@
-.passwordBar
+@import '../utils/variables';
+
+.password
 {
-  height: 5px;
-}
+  margin-bottom: 12px;
 
-.passwordValidation
-{
-  margin-bottom: 1rem;
-}
-
-.formPassword
-{
-  padding: 0;
-  margin-bottom: 2rem;
-  column-count: 2;
-}
-
-.formPasswordAccount
-{
-  width: 500px;
-
-  @media screen and (max-width: 991px) {
-    width: inherit;
-  }
-}
-
-.formPasswordList
-{
-  list-style: none;
-  display: flex;
-  align-items: center;
-  margin-bottom: .5rem;
-
-  svg
+  &_label
   {
-    margin-right: .5rem;
+    @include typographyBuilder(secondary,500,10,16);
   }
-}
 
-.marginAccount
-{
-  margin-left: 200px;
+  &_bar
+  {
+    display: none;
+    width: 100%;
 
-  @media screen and (max-width: 575px) {
-    margin-left: inherit;
+    &::after
+    {
+      content:"";
+      width: 1%;
+      height: 3px;
+      position: absolute;
+      right: 33%;
+      background-color: $color_white;
+    }
+
+    &::before
+    {
+      content:"";
+      position: absolute;
+      width: 1%;
+      height: 3px;
+      left: 33%;
+      background-color: $color_white;
+    }
+
+    &[class*="weak"]
+    {
+      display: block !important;
+      background-image: linear-gradient(to right, $color_error 32%, $color_grey 0%);
+      height: 3px;
+
+      & + span
+      {
+        color: $color_error;
+      }
+    }
+
+    &[class*="medium"]
+    {
+      display: block !important;
+      background-image: linear-gradient(to right, $color_warning 68%, $color_grey 0%);
+      height: 3px;
+
+      & + span
+      {
+        color:$color_warning;
+      }
+    }
+
+    &[class*="strong"]
+    {
+      display: block !important;
+      background: $color_success;
+      height: 3px;
+
+      & + span
+      {
+        color: $color_success;
+      }
+    }
+  }
+
+  &_criteria
+  {
+    list-style-type:none;
+    display: none;
+    margin: 0;
+    padding: 0 0 16px 0;
+
+    &[class*="show"]
+    {
+      display: grid !important;
+      grid-template-columns: 50% 50%;
+    }
+
+    & > li
+    {
+      @include typographyBuilder(secondary, 400, 10, 16);
+
+      & > svg
+      {
+        margin-right: 7px;
+      }
+    }
   }
 }
