--- a/public/scss/utils/_colors.scss
+++ b/public/scss/utils/_colors.scss
@@ -7,6 +7,7 @@
 $color_rose              : #998060;
 $color_rose_bg1          : #FAF9F7;
 $color_rose_bg2          : #F5F2EF;
+$color_line_brown        : #E7E1DA;
 $color_white             : #FFFFFF;
 $color_black             : #000000;
 $color_text_primary      : #444444;
