--- a/public/scss/components/CartDetail.module.scss
+++ b/public/scss/components/CartDetail.module.scss
@@ -102,23 +102,31 @@
 
   &_price
   {
-    padding-top: 12px;
     grid-row: 2;
     grid-column: 3;
-    grid-template-areas: "md";
 
-    :only-child
+    & > :only-child
     {
       @include typographyBuilder(secondary,500,14,24);
       text-decoration-line: none;
       color: $color_text_primary;
-      padding-top:  16px;
+      height: 100%;
+      display: flex;
+      align-items: center;
     }
+
+    & > :not(:only-child)
+    {
+      padding-top: 12px;
+    }
+  }
+
+  &_salePriceWrapper{
+    padding-top: 0 !important;
   }
 
   &_discNote 
   {
-    grid-area: md;
     grid-column: 2;
   }
 
@@ -141,6 +149,7 @@
     flex-direction: column-reverse;
     grid-row: 2 / span 3;
     grid-column: 2 / span 2;
+    min-height: 119px;
 
     & :first-child:before
     {
