--- a/public/scss/pages/Lookbook.module.scss
+++ b/public/scss/pages/Lookbook.module.scss
@@ -38,17 +38,6 @@
       bottom: 0;
       width: 100%;
       height: 100%;
-      
-      &::after
-      {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 50%;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
-        transform: matrix(1, 0, 0, -1, 0, 0);
-      }
     }
 
     &_link
@@ -57,7 +46,19 @@
       width: 100%;
       height: 100%;
       top: 0;
-      opacity: 0;
+      color: transparent !important;
+
+      &::after
+      {
+        content: '';
+        left: 0;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 50%;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+        transform: matrix(1, 0, 0, -1, 0, 0);
+      }
     }
 
     &_label
@@ -104,13 +105,40 @@
       margin:0;
       padding:0;
     }
+
+    &_shareContainer
+    {
+      margin: 0 17px 24px 17px;
+      border-top: 1px solid $color_border;
+      border-bottom: 1px solid $color_border;
+      padding: 24px 0;
+    }
+
+    &_footer
+    {
+      color: $color_rose;
+      text-decoration: none;
+      padding: 0 19px;
+      padding-top: 7px;
+
+      & > a 
+      {
+        color: $color_rose;
+        text-decoration: none;
+      }
+      
+      
+      & > a > svg
+      {
+        margin-right: 15px;
+      }
+    }
   }
 
   &_relatedProducts
   {
     text-align: center;
     @include typographyBuilder(primary,500,20,32);
-    padding-bottom: 24px;
     padding-top: 12px;
     color: $color_text_primary;
   }
