--- a/public/scss/components/Password.module.scss
+++ b/public/scss/components/Password.module.scss
@@ -4,6 +4,33 @@
 {
   margin-bottom: 12px;
 
+  &_passwordContainer
+  {
+    display: grid;
+    grid-template-columns: 80% 20%;
+
+    & > input 
+    {
+      grid-column: 1 / span 2;
+      grid-row: 1;
+    }
+
+    & > button 
+    {
+      color: $color_rose;
+      width: 40px;
+      height: 40px;
+      align-self: center;
+      justify-self: center;
+      z-index: 2;
+      grid-column: 2;
+      grid-row: 1;
+      background-color: $color_rose_bg2;
+      border-radius: 30px;
+      border: none;
+    }
+  }
+
   &_label
   {
     @include typographyBuilder(secondary,500,10,16);
