feat: payment method

--- a/public/scss/pages/ShippingMethod.module.scss
+++ b/public/scss/pages/ShippingMethod.module.scss
@@ -16,6 +16,12 @@
   padding: 18px;
   background: $color_rose_bg1;
 
+  &_section
+  {
+    padding-top: 8px;
+    border-top: 1px dashed $color_rose;
+  }
+
   &_notes
   {
     @include typographyBuilder(secondary, 400, 12, 16);
