--- a/public/scss/components/Stepper.module.scss
+++ b/public/scss/components/Stepper.module.scss
@@ -1,13 +1,11 @@
 @import '../utils/variables';
 
-@mixin circle($color) {
-  width: 32px;
-  height: 32px;
-  border: 3px solid $color;
-  background: transparent;
-  border-radius: 100%;
-  transition: width .2s ease-out, height .2s ease-out, border-width .2s ease-out;
-}
+$borderWidth: 3px;
+$animationTime: 1.5s;
+$border-color-default: $color_line_brown;
+$border-color-fill: $color_rose;
+$size: 35px;
+$howManySteps: 10;
 
 .stepper
 {
@@ -21,73 +19,154 @@
     color: $color_text_primary;
     margin-bottom: 0;
   }
+}
 
-  &_steps
+.progress_circle
+{
+  width: $size;
+  height: $size;
+  line-height: $size;
+  background: none;
+  box-shadow: none;
+  position: relative;
+
+  &:after
   {
-    @include flex(row, center, center);
-    width: 35px;
-    height: 35px;
-    cursor: default;
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: $borderWidth solid $border-color-default;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-    span {
-      color: $color_text_primary;
-      position: absolute;
-      display: block;
-      width: 32px;
-      height: 32px;
+  & > span
+  {
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+  }
+
+  &Left
+  {
+    left: 0;
+  }
+
+  &Bar
+  {
+    width: 100%;
+    height: 100%;
+    background: none;
+    border-width: $borderWidth;
+    border-style: solid;
+    position: absolute;
+    top: 0;
+    border-color: $border-color-fill;
+  }
+
+  &Left &Bar
+  {
+    left: 100%;
+    border-top-right-radius: calc($size / 2);
+    border-bottom-right-radius: calc($size / 2);
+    border-left: 0;
+    -webkit-transform-origin: center left;
+    transform-origin: center left;
+  }
+
+  &Right
+  {
+    right: 0;
+
+    .progress_circleBar
+    {
+      left: -100%;
+      border-top-left-radius: calc($size / 2);
+      border-bottom-left-radius: calc($size / 2);
+      border-right: 0;
+      -webkit-transform-origin: center right;
+      transform-origin: center right;
+    }
+  }
+
+  &Value
+  {
+    display: flex;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 20px;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-weight: 300;
+
+    span
+    {
       @include typographyBuilder(secondary, 400, 12, 32);
+      color: $color_text_primary;
       text-align: center;
-      transition: font-size .2s ease-out;
-    }
-
-    &:before {
-      position: absolute;
-      content: '';
-      background-color: transparent;
-  
-      @include circle($color_line_brown);
     }
   }
+}
 
-  &_percentageBar
+@for $i from 1 through $howManySteps
+{
+	$stepName: calc($i*(100 / $howManySteps));
+
+	//animation only the left side if below 50%
+	@if $i <= calc($howManySteps / 2)
+  { 
+		.progress_circle[data-percentage="#{$stepName}"]
+    {
+			.progress_circleRight .progress_circleBar
+      {
+				animation: loading-#{$i} $animationTime linear forwards;
+			}
+			.progress-circle-left .progress-circle-bar
+      {
+        animation: 0;
+      }
+		}
+	}
+	//animation only the right side if above 50%
+	@if $i > calc($howManySteps / 2)  {  
+		.progress_circle[data-percentage="#{$stepName}"]
+    {
+			.progress_circleRight .progress_circleBar
+      {
+				animation: loading-#{calc($howManySteps / 2)} $animationTime linear forwards;
+			}
+			.progress_circleLeft .progress_circleBar
+      {
+        animation: loading-#{$i - calc($howManySteps / 2)} $animationTime linear forwards $animationTime;
+      }
+		}
+	}
+}
+
+//animation
+@for $i from 1 through calc($howManySteps / 2)
+{ 
+	$degrees: calc(180 / calc($howManySteps / 2));
+	$degrees: ($degrees*$i);
+
+	@keyframes loading-#{$i}
   {
-    @include flex(row, center, center);
-    width: 32px;
-    height: 32px;
-    position: absolute;
-    clip-path: inset(0 0 0 50%);
-  }
-}
+    0%
+    {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
 
-.percentageBar33
-{ 
-  &:before {
-    @include circle($color_rose);
-    position: absolute;
-    content: '';
-    clip-path: inset(0 50% 0 0);
-    transform: rotate(120deg);
-  }
-}
-
-.percentageBar66
-{ 
-  &:before {
-    @include circle($color_rose);
-    position: absolute;
-    content: '';
-    clip-path: inset(0 50% 0 0);
-    transform: rotate(240deg);
-  }
-}
-
-.percentageBar100
-{ 
-  &:before {
-    @include circle($color_rose);
-    position: absolute;
-    content: '';
-    clip-path: inset(0 50% 0 0);
-    transform: rotate(120deg);
-  }
+    100%
+    {
+      -webkit-transform: rotate($degrees);
+			transform: rotate(#{$degrees}deg);
+    }
+	}
 }
