--- a/public/scss/utils/_mixins.scss
+++ b/public/scss/utils/_mixins.scss
@@ -42,13 +42,13 @@
 @mixin fontSize($size, $base: 16)
 {
     font-size: ($size + 0px); // fallback for old browsers
-    font-size: ($size / $base) * 1rem;
+    font-size: calc($size / $base) * 1rem;
 }
 
 @mixin lineHeight($size, $base: 16)
 {
     line-height: $size + 0px; // fallback for old browsers
-    line-height: ($size / $base) * 1rem;
+    line-height: calc($size / $base) * 1rem;
 }
 
 /**
