feat: modified order tab account and fix some warning
- use flex-start and flex-end insted start and end
- serperate some css for account

--- a/public/scss/components/Breadcrumbs.module.scss
+++ b/public/scss/components/Breadcrumbs.module.scss
@@ -3,7 +3,7 @@
 .breadcrumbs
 {
   @include typographyBuilder(secondary,400,10,16);
-  @include flex(row,start,start);
+  @include flex(row,flex-start,flex-start);
 }
 
 .breadcrumb
