--- a/public/scss/components/Footer.module.scss
+++ b/public/scss/components/Footer.module.scss
@@ -26,7 +26,7 @@
   a 
   {
     height: 100%;
-    @include flex(column, center, end);
+    @include flex(column, center, flex-end);
     text-decoration: none;
     & > div
     {
