--- a/public/scss/pages/Account.module.scss
+++ b/public/scss/pages/Account.module.scss
@@ -78,16 +78,6 @@
     }
   }
 
-  &_back
-  {
-    position: absolute;
-    height: 32px;
-    left: 26px;
-    display: flex;
-    align-items: center;
-    top: 0;
-  }
-
   &_input
   {
     padding: 0 17px;
@@ -165,15 +155,14 @@
 
     &_item
     {
-      display: flex;
-      flex-direction: column;
+      @include flex(column,unset,unset);
     }
 
     &_label
     {
       color: $color_text_secondary;
       padding: 9px 24px 0 24px;
-      position: absolute;
+      @include absolute();
       @include typographyBuilder(secondary,500,10,16);
       margin-bottom: 8px;
     }
