fix: use mixin fixed and fix import file

--- a/public/scss/components/Map.module.scss
+++ b/public/scss/components/Map.module.scss
@@ -23,9 +23,7 @@
 
   &_mapPopup
   {
-    position: fixed;
-    top: 0;
-    left: auto;
+    @include fixed(0,auto,auto,auto);
     min-width: 375px;
     max-width: 375px;
     width: 375px;
