--- a/public/scss/components/Form.module.scss
+++ b/public/scss/components/Form.module.scss
@@ -246,6 +246,7 @@
     border-radius: 37px;
     padding: 0 24px;
     color: $color_text_primary;
+    cursor: pointer;
     -webkit-appearance: none;
     -moz-appearance: none;
     background-image:
