feat: clean code

--- a/public/scss/components/Placeholder.module.scss
+++ b/public/scss/components/Placeholder.module.scss
@@ -53,6 +53,13 @@
       height: 65px;
       width: 100%;
     }
+
+    &List
+    {
+      height: 48px;
+      width: 100%;
+      margin: 8px 0;
+    }
   }
 
   &_product
